# Local-Whisper-Tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  tmp_diff.txt  vite.config.js
.antigravitycli/: 88bba421-cbed-453e-ad47-dc57a89d5dbb.json
.jules/: bolt.md
public/: audio-worklet.js
src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  test_tray.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  fnhotkey.rs  lib.rs  main.rs  model.rs  paste.rs  settings.rs  whisper.rs
src/lib/: ErrorBanner.svelte  HotkeySettings.svelte  IndicatorView.svelte  LevelMeter.svelte  ModelLoader.svelte  ModelPicker.svelte  PasteTester.svelte  Preferences.svelte  RecordButton.svelte  Transcriber.svelte  TranscriptView.svelte  audio-utils.js  stores.js  tauri-bridge.js
